[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kronweave"
version = "0.1.0"
description = "CP-seeded Kronecker generator for power-law sparse tensors"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "KronWeave Contributors"}
]
keywords = ["kronecker", "sparse-tensor", "power-law", "synthetic-data"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "PyYAML",
]

[project.optional-dependencies]
dev = ["pytest"]
analysis = ["powerlaw", "matplotlib"]
torch = ["torch"]

[project.scripts]
kronweave = "kronweave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
